# uatu

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/: internals.md  security.md
tests/: conftest.py  test_agents.py  test_allowlist.py  test_detector.py  test_event_bus.py  test_handlers.py  test_investigation_logging.py  test_permissions.py  test_processes.py  test_slash_commands.py  test_tool_preview.py  test_watchers.py
uatu/: __init__.py  agent.py  allowlist.py  audit_cli.py  chat.py  cli.py  config.py  network_allowlist.py  network_security.py  permissions.py  token_tracker.py
uatu/agents/: __init__.py
uatu/analyzers/: __init__.py
uatu/chat_session/: commands.py  components.py  handlers.py  session.py  stats.py
uatu/events/: __init__.py  bus.py
uatu/tools/: __init__.py  command_tools.py  constants.py  macos_tools.py  proc_tools.py  sdk_tools.py
uatu/ui/: __init__.py  approval.py  console.py  markdown.py  tool_preview.py
uatu/watcher/: __init__.py  async_core.py  async_handlers.py  async_watchers.py  base.py  core.py  detector.py  investigator.py  models.py
